force-app/main/default/objects/FormQuestion__c/FormQuestion__c.object-meta.xml
<CustomObject>
    <label>Form Question</label>
    <nameField>
        <label>Form Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>