force-app/main/default/objects/FormQuestion__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>